# mockaccino

./: .c8rc.json  .gitignore  .mocharc-reporters.unit.json  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  CLAUDE.md  MCP_PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: webpack.yml
integration/: .gitignore  CMakeLists.txt  README.md  run.js
integration/src/: board.c  board.h  display.c  display.h  engine.c  engine.h  main.c  rng.c  rng.h  sink.cpp  sink.hpp
integration/test/: test_board.cpp  test_cpp_inline_mock.cpp  test_cpp_mock.cpp  test_engine.cpp  test_mock_asserts.cpp  test_stub.cpp
lic/: LICENSE_CPARSE.txt
scripts/: filter-vscode-coverage.mjs  gen-inline-goldens.js  mcp-probe.js
src/: ai_mockaccino.ts  ai_parser.ts  ai_providers.ts  clang_includes.ts  clang_mockaccino.ts  clang_parser.ts  claude_cli.ts  cparse.js  cpp_class_parser.ts  cpp_class_selection.ts  cpp_mock_stringifier.ts  cpp_mockgen.ts  declaration_extractor.ts  extension.ts  file_writer.ts  function_stringifier.ts  impl_generator.ts  include_paths.ts  inline_mock_inserter.ts  interpolator.ts  mcp_server.ts  mcp_tools.ts  mockaccino.ts  mockachino.ts  naming.ts  preprocessor.ts  regex_mockaccino.ts  regex_parser.ts  structured_helpers.ts  template_context.ts  template_renderer.ts
src/test/: acceptance.test.ts  ai_mockaccino.test.ts  ai_parser.test.ts  clang_parser.test.ts  claude_cli.test.ts  cpp_class_parser.test.ts  cpp_class_selection.test.ts  cpp_mock_stringifier.test.ts  function_stringifier.test.ts  include_paths.test.ts  inline_mock_inserter.test.ts  interpolator.test.ts  mcp_tools.test.ts  mockaccino.test.ts  naming.test.ts  preprocessor.test.ts  regex_parser.test.ts  structured_helpers.test.ts
src/test/fixtures/dummy_h/: dummy.h
src/test/fixtures/dummy_h/expected/: dummy_mock.cc  dummy_mock.h  dummy_stub.cc
src/test/fixtures/hpp_ext/: config.json  gadget.c
src/test/fixtures/hpp_ext/expected/: gadget_mock.cc  gadget_mock.hpp  gadget_stub.cc
src/test/fixtures/iface_hpp/: iface.hpp
src/test/fixtures/iface_hpp/expected/: iface_inline.hpp  iface_mock.h  iface_mock.hpp
src/test/fixtures/ker_c/: ker.c
src/test/fixtures/ker_c/expected/: ker_mock.cc  ker_mock.h  ker_stub.cc
src/test/fixtures/main_c/: main.c
src/test/fixtures/main_c/expected/: main_mock.cc  main_mock.h  main_stub.cc
src/test/fixtures/main_h/: main.h
src/test/fixtures/main_h/expected/: main_mock.cc  main_mock.h  main_stub.cc
src/test/fixtures/mixed_hpp/: mixed.hpp
src/test/fixtures/mixed_hpp/expected/: mixed_inline.hpp  mixed_mock.cc  mixed_mock.h  mixed_mock.hpp  mixed_stub.cc
src/typings/: index.d.ts
templates/: cpp_mock_header_template.hpp  mock_header_template.h  mock_src_template.cc  stub_src_template.cc
